test/corpus/schema.txt
================================================================================
directives
================================================================================
@INCLUDE abc.conf
@SET my_env=1

--------------------------------------------------------------------------------
(config
  (directive
    (directive_include
      (value_type)))
  (directive
    (directive_set
      (key_type)
      (value_type))))



================================================================================
directives_set with space
================================================================================

@SET a      = 1

--------------------------------------------------------------------------------
(config
  (directive
    (directive_set
      (key_type)
      (value_type))))



================================================================================
directives_set without space
================================================================================
@SET a=1

--------------------------------------------------------------------------------
(config
  (directive
    (directive_set
      (key_type)
      (value_type))))


================================================================================
section
================================================================================
[INPUT]
    KEY1  VALUE1
    KEY2  VALUE2

--------------------------------------------------------------------------------
(config
  (section
    (section_header
      (section_header_type))
    (section_body
      (entry
        (key_type)
        (value_type))
      (entry
        (key_type)
        (value_type)))))


================================================================================
comments
================================================================================
# comment

[INPUT]
    # comment
    KEY1  VALUE1

--------------------------------------------------------------------------------
(config
  (comment)
  (section
    (section_header
      (section_header_type))
    (section_body
      (comment)
      (entry
        (key_type)
        (value_type)))))


================================================================================
blank line between top-level blocks
================================================================================

@SET a=1

[INPUT]
    KEY1  VALUE1

@INCLUDE other.conf

--------------------------------------------------------------------------------
(config
  (directive
    (directive_set
      (key_type)
      (value_type)))
  (section
    (section_header
      (section_header_type))
    (section_body
      (entry
        (key_type)
        (value_type))))
  (directive
    (directive_include
      (value_type))))


================================================================================
trailing blank lines after section
================================================================================
[INPUT]
    KEY1  VALUE1


--------------------------------------------------------------------------------
(config
  (section
    (section_header
      (section_header_type))
    (section_body
      (entry
        (key_type)
        (value_type)))))
